01.my-app-jpa/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk002-my-app
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk002-my-app
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: b4b0bfcf04c7cd0f658321d02714cb5d
      labels:
        app: sk002-my-app
    spec:
      serviceAccountName: default
      containers:
      - name: my-app
        image: amdp-registry.skala-ai.com/skala25a/sk002-my-app:2.0.0
        imagePullPolicy: Always
